infrastructure/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'MatchTal-AI: Single EC2 instance with Docker pre-installed.'

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  
  VpcId:
    Description: The VPC to deploy the instance into
    Type: AWS::EC2::VPC::Id
    ConstraintDescription: must be the ID of an existing VPC.

  SubnetId:
    Description: The Subnet to deploy the instance into (must be in the chosen VPC)
    Type: AWS::EC2::Subnet::Id
    ConstraintDescription: must be the ID of an existing Subnet.

  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t3.small
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3.small
      - t3.medium
    ConstraintDescription: must be a valid EC2 instance type.

  AllowedIP:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  MatchTalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedIP
        - IpProtocol: tcp
          FromPort: 8002
          ToPort: 8002
          CidrIp: 0.0.0.0/0
  
  MatchTalInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !Ref MatchTalSecurityGroup
          SubnetId: !Ref SubnetId
      KeyName: !Ref KeyName
      # Using a dynamic SSM parameter to get the latest Amazon Linux 2023 AMI
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y docker
          service docker start
          usermod -a -G docker ec2-user
          systemctl enable docker
      Tags:
        - Key: Name
          Value: MatchTal-Profile-Service

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref MatchTalInstance
  IPAddress:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt MatchTalInstance.PublicIp
